# actions-template-file

./: CHANGELOG.md  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  template.yml
src/: main.py
